package Programs;

public class InventoryService extends ItemService {
}
