@startuml

title __PROGRAMS's Class Diagram__\n

  namespace Programs {
    class Programs.EntityService {
        - hibernateSession : Session
        + EntityService()
        + addEntity()
        + deleteEntity()
        + getDetails()
        + getHibernateSession()
        + updateEntity()
    }
  }
  

  namespace Programs {
    class Programs.HashGenerator {
        - hashedPass : String
        + HashGenerator()
        + generateHash()
        + getHashedPass()
    }
  }
  

  namespace Programs {
    class Programs.InventoryService {
    }
  }
  

  namespace Programs {
    class Programs.ItemService {
        + isAvailable()
        + updateQty()
    }
  }
  

  namespace Programs {
    class Programs.MenuService {
    }
  }
  

  namespace Programs {
    class Programs.OrderService {
        + getCustomerOrders()
        + getOrdersFromDate()
        + getOrdersWithinPeriod()
        + updateOrderStatus()
    }
  }
  

  namespace Programs {
    class Programs.UserService {
        + UserService()
        + addEntity()
        + authenticate()
        + authorize()
        + login()
        + logout()
    }
  }
  

  Programs.EntityService .up.|> Interfaces.RepositoryInterface
  Programs.InventoryService -up-|> Programs.ItemService
  Programs.ItemService .up.|> Interfaces.InventoryRepository
  Programs.MenuService -up-|> Programs.ItemService
  Programs.OrderService .up.|> Interfaces.OrderRepository
  Programs.UserService .up.|> Interfaces.UserRepository
  Programs.UserService -up-|> Programs.EntityService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
